tests/NormalTests/paczka2/big_fuzzy/94326787.err
Error in line 4: NIVL S320 91,26
Error in line 2: hJMLv81a S159 79,4
Error in line 9: NIVL S159 37,7
Error in line 11: NIVL S623 20,3
Error in line 18: OSwADvg S159 57,3
Error in line 23: OSwADvg S509 67,7
Error in line 45: pVj1lTya68Q S623 219,6
Error in line 50: S320 S509 35,2
Error in line 54: hJMLv81a S159 0,8
Error in line 64: S320 S509 93,6
Error in line 61: hJMLv81a S623 58,3
Error in line 57: v9zFHNF S623 54,3
Error in line 66: NIVL S509 50,4
Error in line 71: hJMLv81a S320 16,9
Error in line 86: S320 S623 54,5
Error in line 98: v9zFHNF S159 96,7
Error in line 95: S320 S320 20,5
Error in line 100: S320 S159 15,2
Error in line 74: bDC S509 60,8
Error in line 108: OSwADvg S623 42,7
Error in line 102: S320 S623 5,6
Error in line 116: NIVL S623 82,5
Error in line 114: S320 S159 81,1
Error in line 119: v9zFHNF S509 31,7
Error in line 129: v9zFHNF S623 84,1
Error in line 137: S320 S623 215,94
Error in line 135: v9zFHNF S623 92,1
Error in line 140: v9zFHNF S320 68,7
Error in line 145: S320 S623 39,9
Error in line 136: OSwADvg S623 27,1
Error in line 162: bDC S159 41,9
Error in line 167: v9zFHNF S320 87,3
Error in line 177: v9zFHNF S159 36,5
Error in line 179: pVj1lTya68Q S159 172,2
Error in line 178: OSwADvg S509 27,6
Error in line 184: pVj1lTya68Q S509 69,1
Error in line 185: OSwADvg S320 62,2
Error in line 189: v!zFHNF S320 80,6
Error in line 192: hJMLv81a S509 9,6
Error in line 202: v9zFHNF S320 102,1
Error in line 217: NIVL S159 100,8
Error in line 227: pVj1lTya68Q S159 17,5
Error in line 229: S320 S509 26,0
Error in line 236: hJMLv81a S/23 19,/
Error in line 235: NIVL S623 98,3
